tests/backends/bits_set_slice_02.isa
// RUN: not %aslrun --runtime-checks %s | filecheck %s
// Copyright (C) 2023-2026 Intel Corporation

function FUT_8_4(x : Bits(8), i : Integer, y : Bits(4)) -> Bits(8)
begin
    var r := x;
    r[i +: 4] := y;
    return r;
end

function main() -> Builtin::Foreign::CInt
begin
    Std::Print::Bits::Hex(FUT_8_4(0b0000_0000, 5, 0b1111)); Print("\n");
    // CHECK: Evaluation error: assertion failure
    return Builtin::Foreign::CInt::From_Integer(0);
end
